[package]
name = "typed-measurements"
version = "0.1.0"
edition = "2024"
description = "A library for handling physical measurements with units."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Elements-SRL/measurements"

[dependencies]
uom_derive = { version = "0.1.0" }
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
serde = { version = "1.0", features = ["derive"] }